<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MovieApp</string>
    <string name="action_settings">Settings</string>
    <string name="description">"Cover of movie"</string>
    <string name="title">FindMyMovie</string>
    <string name="below_title">The movie search App</string>
    <string name="search_button">Search for movies</string>
    <string name="watchlist_button">WatchList</string>
    <string name="title_search">Title</string>
    <string name="genre_search">Genre</string>
    <string name="rating_search">Rating</string>
    <string name="search">Search</string>
    <string name="titleEx">e.g. Titanic</string>
    <string name="genreEx">e.g. Comedy</string>
    <string name="add_button">Add to Watchlist</string>
    <string name="detailGenre">Genre:</string>
    <string name="detailYear">Year:</string>
    <string name="detailRating">Rating:</string>
    <string name="minRating">Minimal rating:</string>
    <string name="detailDescription">Description:</string>
    <string name="button_discover">Discover new movies</string>
    <string name="button_filmographie">Search for an actor</string>
    <string name="button_keywords">Keyword</string>
    <string name="genre_prompt">Choose a genre</string>
    <string name="keyword_search">Search for keywords!</string>
    <string name="person_search">Get the filmographie of an actor!</string>
    <string name="discover_search">Search for genre, rating and release date!</string>
    <string name="title_search_text">Search for a specific title!</string>
    <string name="choose_search">...or browse the database:</string>
    <string name="explanation_text">Check out brand new movies...</string>
    <string name="year">Year</string>
    <string name="rating_zero">0.0</string>
    <string name="year_example">e.g. 2010</string>
    <string name="popular">Only search for popular Movies?</string>
    <string name="help_text">Thanks for using this App. It is the easiest way for finding movies and watching trailers of actual blockbusters or unforgotten classics. Simple choose a search method, fill in your values and search. The Result will contain all movies, which fit your settings.
        The arrow at the very right will show you the popularity of the movies. You can get detail information by clicking on the desired movie. To add a movie to your Watchlist, just press the button in the detail view. To delete movies of your database, just go to the Watchlist section, click on it and hold it for a few moments.
         No guarantee for the correctness of the displayed data. All data belongs to https://www.themoviedb.org</string>
    <string name="attention">Attention</string>
    <string name="instruction">Please enable your internet connection to get the whole range of functions. If you use this app for the first time, also check the help section for detailed information!</string>
    <string name="prename">First name</string>
    <string name="do_not_show">OK please do not show again.</string>
    <string name="prename_example">e.g. Leonardo</string>
    <string name="lastname">Last name</string>
    <string name="lastname_example">e.g. DiCaprio</string>
    <string name="keyword_example">e.g. Moon</string>

    <string-array name="genre_name">
        <item>Action</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Disaster</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Eastern</item>
        <item>Erotic</item>
        <item>Family</item>
        <item>Fan Film</item>
        <item>Fantasy</item>
        <item>Film Noir</item>
        <item>Foreign</item>
        <item>History</item>
        <item>Holiday</item>
        <item>Horror</item>
        <item>Indie</item>
        <item>Music</item>
        <item>Musical</item>
        <item>Mystery</item>
        <item>Neo-noir</item>
        <item>Road Movie</item>
        <item>Romance</item>
        <item>Science Fiction</item>
        <item>Short</item>
        <item>Sport</item>
        <item>Sporting Event</item>
        <item>Sports Film</item>
        <item>Suspense</item>
        <item>TV Movie</item>
        <item>Thriller</item>
        <item>War</item>
        <item>Western</item>
    </string-array>

    <integer-array name="genre_ids">
        <item>28</item>
        <item>12</item>
        <item>16</item>
        <item>35</item>
        <item>80</item>
        <item>105</item>
        <item>99</item>
        <item>18</item>
        <item>82</item>
        <item>2916</item>
        <item>10751</item>
        <item>10750</item>
        <item>14</item>
        <item>10753</item>
        <item>10769</item>
        <item>36</item>
        <item>10595</item>
        <item>27</item>
        <item>10756</item>
        <item>10402</item>
        <item>22</item>
        <item>9648</item>
        <item>10754</item>
        <item>1115</item>
        <item>10749</item>
        <item>878</item>
        <item>10755</item>
        <item>9805</item>
        <item>10758</item>
        <item>10757</item>
        <item>10748</item>
        <item>10770</item>
        <item>53</item>
        <item>10752</item>
        <item>37</item>
    </integer-array>

</resources>