<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp" 
>

    <TextView
        android:id="@+id/title_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_search" />

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_search"
        android:hint="@string/titleEx"
        android:ems="10" >

       
    </EditText>

    <TextView
        android:id="@+id/genre_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_title"
        android:text="@string/genre_search" />

    <EditText
        android:id="@+id/edit_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/genre_search"
        android:hint="@string/genreEx"
        android:ems="10" />

    <TextView
        android:id="@+id/rating_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_genre"
        android:text="@string/rating_search" />

    <SeekBar
        android:id="@+id/seekBar_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rating_search" 
        android:max="100"
        />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/search_button" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_genre"
        android:layout_toEndOf="@+id/rating_search"
        android:layout_toRightOf="@+id/edit_genre"
        android:text="0" />

</RelativeLayout>